STYLE: change body width from 100vh to 100% to avoid horizontal scroll

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
 
   body {
     min-height: 100vh;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
